<resources>
    <string name="app_name">UberCuts</string>

    <!--Login-->
    <string name="str_you">You Are</string>
    <string name="str_user">User</string>
    <string name="str_vendor">Vendor</string>
    <string name="str_sign">Sign In</string>
    <string name="str_email">Email ID</string>
    <string name="str_password">Password</string>

    <string name="str_forgot">Forgot Password ?</string>
    <string name="str_dont">Do not Have an Account?</string>
    <string name="btn_create">Create an Account</string>

    <!--Register-->
    <string name="str_account">Account Information</string>
    <string name="str_name">Full Name</string>
    <string name="str_phone">Mobile No.</string>
    <string name="str_recreatepwd">Confirm Password</string>
    <string name="str_proceed">Proceed</string>
    <string name="str_alreadyacc">Already Have An Account?</string>
    <string name="str_addresst">Address</string>
    <string name="str_steet">Street</string>
    <string name="str_city">City</string>
    <string name="str_state">State</string>
    <string name="str_business">Business Name</string>
    <string name="str_country">Country</string>
    <string name="str_zip">Zip Code</string>
    <string name="str_aboutme">About Me</string>
    <string name="str_credit">Credit Card Details</string>
    <string name="str_card">Card No</string>
    <string name="str_mm">MM</string>
    <string name="str_yyy">Select</string>
    <string name="str_cvv">Enter CVV</string>
    <string name="str_register">Register</string>
    <string name="str_experience">Experience</string>

    <!--Forgot Password-->
    <string name="str_enteremail">Enter Your Email ID</string>
    <string name="str_submit">Submit</string>
    <string name="str_cancle">Cancel</string>

    <!--Exeperience-->
    <string name="hint_strater">Starter</string>
    <string name="hint_zero_one">0 - 1 Years</string>
    <string name="hint_one_five">1 - 5 Years</string>
    <string name="hint_five_ten">5 - 10 Years</string>

    <!--Errors-->
    <string name="time_our_error">Time out.</string>
    <string name="can_not_connect">No Internet Connection Available.</string>
    <string name="auth_fail">Authentication Failed.</string>
    <string name="server_error">Server error.</string>
    <string name="netwotk_error">Unable to connect with network.</string>
    <string name="parser_error">Parse error.</string>
    <string name="unknow_error_txt">Unknown Error.</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_activity__view__profile">Activity_View_Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_view_message">View Message</string>
    <string name="processing">Processing...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>


    <!--Navigation drawer Menu User-->
    <string name="nav_home">Home</string>
    <string name="nav_my_tasks">My Tasks</string>
    <string name="nav_payment_hoistory">Payment History</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_message">Messages</string>
    <string name="nav_change_pass">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_message">Messages</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>

    <!--User Home Page-->
    <string name="select">Select Your Services</string>

    <!--Navigation drawer Menu Vedor-->
    <string name="nav_lead">Leads</string>
    <string name="nav_my_bids">My Bids</string>
    <string name="nav_my_jobs">My Jobs</string>
    <string name="nav_my_service_offers">My Service &amp; Offers</string>
    <string name="nav_rating_raviews">Rating &amp; Reviews</string>
    <string name="title_activity_maps">Map</string>


    <string name="hint_service_add">Add More Services</string>
    <string name="hint_new_service_add">Add New Service</string>
    <string name="hint_service_name">Service Name :</string>
    <string name="hint_default_price">Default Price ($) :</string>
    <string name="hint_todays_offer">Today\'s Offer (%) :</string>
    <string name="hint_todays_offer1">Today\'s Offer</string>
    <string name="hint_add_btn">Add</string>
    <string name="hint_cancel">Cancel</string>

    <!--Post Task-->
    <string name="hint_regular_booking_post_task">Regular Booking</string>
    <string name="hint_post_task">Post Your Offer</string>
    <string name="hint_post_msg">Your Message :</string>
    <string name="hint_your_price">Your Price :</string>
    <string name="hint_job_location">Jobs Location :</string>
    <string name="hint_cat">Category :</string>
    <string name="hint_sub_cat">Sub Category :</string>
    <string name="hint_post_task_btn">Post</string>
    <!--My Work-->
    <string name="text_images">Images</string>
    <string name="text_videos">Videos</string>
    <string name="text_total">Total :</string>
    <!--Profile Info-->
    <string name="text_first_name">Full Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email_id">Email Id</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_about_me">About Me</string>

    <!--Business Info-->
    <string name="text_business_name">Business Name : </string>
    <string name="text_experience">Experience : </string>
    <string name="text_business_address">Business Address : </string>
    <string name="text_street">Street</string>
    <string name="text_city">City</string>
    <string name="text_state">State</string>
    <string name="text_country">Country</string>
    <string name="text_zip_code">Zip Code</string>

    <!--Pay Now-->
    <string name="text_total_amount1">Total Amount</string>

    <!--Card Details-->
    <string name="text_card_number">XXXX XXXXXXXX XXXX</string>

    <!--Book Your Task-->
    <string name="text_book_task">Book Your Task</string>
    <string name="text_book">Book</string>

    <!-- Posted Fragment-->
    <string name="hint_posted_services">Services :</string>
    <string name="text_posted">Posted</string>
    <string name="text_sub_service">Sub Services :</string>
    <string name="text_date">Date :</string>
    <string name="text_time">Time :</string>
    <string name="text_job_location">Job Location :</string>
    <string name="text_description">Description :</string>
    <string name="text_beautician">Beautician :</string>
    <string name="text_or">OR</string>
    <string name="text_view_offers">View Received Offers</string>
    <string name="text_cancel_task">Cancel This Task</string>

    <!--Booking Confirmation-->
    <string name="text_beautician_charge">Beautician Charge</string>
    <string name="text_other_charge">Other Charge</string>
    <string name="text_promo_code">Promo Code</string>
    <string name="text_total_amount">Total</string>
    <string name="text_pay_now">Pay Now</string>

    <!--Rating And Review-->
    <string name="text_based_on">Based On 80 user Rating</string>
    <string name="text_review">Review</string>
    <string name="text_review_comment">Review Comment</string>
    <string name="hint_experience_colon">Experience :</string>

</resources>
