<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/str_register"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_20" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profilepic"
            android:layout_width="@dimen/dimens_100dp"
            android:layout_height="@dimen/dimens_100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:src="@drawable/user_register" />

        <TextView
            android:id="@+id/tv_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/str_addresst"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_18sp" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/str_country"
            android:inputType="text"

            android:paddingLeft="@dimen/dimens_20dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:editable="false"
            android:hint="@string/str_state"
            android:inputType="text"
            android:paddingLeft="@dimen/dimens_20dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:editable="false"
            android:hint="@string/str_city"
            android:inputType="text"
            android:paddingLeft="@dimen/dimens_20dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


        <EditText
            android:id="@+id/et_steet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:hint="@string/str_steet"
            android:inputType="text"
            android:paddingLeft="@dimen/dimens_20dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_textbox"
            android:hint="@string/str_zip"
            android:inputType="text"
            android:paddingLeft="@dimen/dimens_20dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />


        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgotpwd"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_button_red"
            android:text="@string/str_proceed"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_alreadyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_user"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimens_10dp"
            android:text="@string/str_alreadyacc"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_16dp" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/dimens_10dp"
            android:layout_marginLeft="@dimen/text_20"
            android:layout_marginRight="@dimen/text_20"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:background="@drawable/bg_button_blue"
            android:text="@string/str_sign"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>