<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@drawable/logo_splash" />

    <TextView
        android:id="@+id/tv_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:text="@string/str_you"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_20" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_you"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:background="@drawable/bg_button_red"
        android:text="@string/str_user"
        android:textColor="@color/colorWhite" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_user"
        android:id="@+id/btn_vendor"

        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/text_20"
        android:layout_marginRight="@dimen/text_20"
        android:layout_marginTop="@dimen/dimens_20dp"
        android:background="@drawable/bg_button_blue"
        android:text="@string/str_vendor"
        android:textColor="@color/colorWhite" />
</RelativeLayout>